<RelativeLayout android:id="@+id/rl_root"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center_horizontal"
                tools:context="com.iutils.login.view.LoginActivity">

    <com.iutils.widgets.ObservableScrollView
        android:id="@+id/sv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/ll_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_login_logo"/>

                <ImageView
                    android:id="@+id/iv_settings"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/icon_settings"/>

            </RelativeLayout>

            <TableLayout
                android:id="@+id/ll_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_logo"
                android:paddingLeft="10dip"
                android:paddingRight="10dip">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <EditText
                        android:id="@+id/et_user_id"
                        style="@style/style_login_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/user_id"
                        android:inputType="none"
                        android:maxLength="64"
                        android:text=""/>

                    <ImageView
                        android:id="@+id/iv_clear_user_id"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center|right"
                        android:contentDescription="@null"
                        android:src="@drawable/icon_login_clear"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_gravity=""
                        android:layout_weight="1.0"
                        android:background="@color/color_login_hint"
                        android:contentDescription="@null"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <EditText
                        android:id="@+id/et_user_pwd"
                        style="@style/style_login_txt"
                        android:layout_height="50dp"
                        android:layout_weight="1.0"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/user_pwd"
                        android:inputType="textPassword"
                        android:maxLength="32"/>

                    <CheckBox
                        android:id="@+id/chk_show_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:background="@null"
                        android:button="@drawable/check_state"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_gravity=""
                        android:layout_weight="1.0"
                        android:background="@color/color_login_hint"
                        android:contentDescription="@null"/>
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:id="@+id/rl_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_input"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_btn_blue_selector"
                    android:padding="10dip"
                    android:text="@string/str_login_submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
                <!-- 修改密码 -->
                <TextView
                    android:id="@+id/forgetpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/btn_login"
                    android:layout_marginTop="40dp"
                    android:text="@string/str_reset_pwd"
                    android:textColor="@color/blue3"/>

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/forgetpwd"
                    android:layout_below="@id/btn_login"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/forgetpwd"
                    android:text="@string/register"
                    android:textColor="@color/blue3"/>
            </RelativeLayout>
        </RelativeLayout>
    </com.iutils.widgets.ObservableScrollView>


</RelativeLayout>
